<resources>
    <string name="app_name">Pathfinding Visualizer</string>
    <string name="pathfind">Pathfind</string>
    <string name="start_button">Start</string>
    <string name="background_for_spinner">background for spinner</string>
    <string name="main_menu">Main Menu</string>
    <string name="generate_maze">Generate</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Preference Titles -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>

    <!-- Messages Preferences -->
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>

    <!-- Sync Preferences -->
    <string-array name="gridSizes">
        <item>9x16</item>
        <item>18x32</item>
    </string-array>
    <string-array name="speeds">
        <item>FAST</item>
        <item>NORMAL</item>
        <item>SLOW</item>
    </string-array>
    <string-array name="algorithms">
        <item>DIJKSTRAS</item>
        <item>ASTAR</item>
        <item>GREEDY</item>
        <item>DEPTHFIRST</item>
        <item>BREADTHFIRST</item>
    </string-array>
    <string-array name="mazes">
        <item>SIMPLE</item>
        <item>BACKTRACKER</item>
    </string-array>
</resources>
